<resources>
    <string name="app_name">海绵娱</string>
    <string name="app_tip">提示</string>
    <string name="push_video_nim_status_connecting">连接中...</string>
    <string name="push_video_nim_status_logining">登录中...</string>
    <string name="push_video_nim_status_unlogin">未登录</string>
    <string name="push_video_net_broken">当前网络不可用</string>
    <string name="push_video_kick_out">被踢出聊天室，原因:</string>
    <string name="push_video_nim_black_list">你已被拉入黑名单，不能再进入</string>
    <string name="push_video_nim_login_exception">登录异常，错误码为：</string>
    <string name="fragment_base_info_nickname">昵称</string>
    <string name="fragment_base_info_copy">点击复制分享码</string>
    <string name="fragment_base_info_select">请点击选择</string>
    <string name="fragment_base_info_gender">性别</string>
    <string name="fragment_base_info_weight">体重</string>
    <string name="fragment_base_info_phone">手机    </string>
    <string name="fragment_base_info_phone_hint">请输入手机号</string>
    <string name="fragment_base_info_change">更改</string>
    <string name="fragment_base_info_exit">退出</string>
    <string name="base_select_item_mytitle">出发地</string>
    <string name="base_select_item_content">广东省 广州市 天河区</string>
    <string name="base_select_item_content2">请输入</string>
    <string name="dialog_alert_select_select">请选择</string>
    <string name="dialog_alert_select_ok">确    定</string>
    <string name="dialog_alert_select_cancel">取    消</string>
    <string name="dialog_choose_pay">请选择支付方式</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="wx_tip">提示</string>
    <string name="wx_getting_prepayid">正在获取预支付订单...</string>
    <string name="activity_recharge_pay_cancel">支付已取消，支付失败</string>
    <string name="activity_recharge_pay_exception">微信支付失败，支付异常</string>
    <string name="activity_recharge_get_user_fail">无法获取信息</string>
    <string name="activity_recharge_get_charging">正在充值中...</string>
    <string name="activity_recharge_pay_success">支付成功</string>
	<string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="fragment_total_txt_piao">娱票</string>
    <string name="fragment_total_value">0</string>
    <string name="guidePagePoint">小圆点</string>
    <string name="phone_number">手机号：</string>
    <string name="editText_phone_hit">请输入手机号</string>
    <string name="validate">验证码：</string>
    <string name="validate_hit">请输入验证码</string>
    <string name="password">密      码：</string>
    <string name="password_hit">请输入密码：</string>
    <string name="password_again">再输入密码：</string>
    <string name="password_again_hit">请再输入密码</string>
    <string name="shareCode">分享码：</string>
    <string name="shareCode_hit">请输入好友分享码</string>
    <string name="login_ok">确定</string>
    <string name="login_cancel">取消</string>
    <string name="already_ready_protocol">已阅读用户协议</string>
    <string name="get_validate">获取验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="loginName">登录名</string>
    <string name="loginPassword">密码</string>
    <string name="loginIsLogining">正在为您登录中...</string>
    <string name="loginSuccess">登陆成功</string>
    <string name="signUpPhone">请输入手机号</string>
    <string name="signUpValidate">获取验证码...</string>
    <string name="ValidateSuccess">获取成功</string>
    <string name="signUpUserProtocol">请阅读用户协议</string>
    <string name="signUpPhoneNumber">手机号</string>
    <string name="signUpValidateCode">验证码</string>
    <string name="signUpPasswordDifferent">两次密码不同</string>
    <string name="signUpValidateError">验证码错误</string>
    <string name="signUping">注册中...</string>
    <string name="signUpSuccess">注册成功</string>
    <string name="signUpgetPassword">找回密码成功</string>
    <string name="signUpForgetPassword">忘记密码...</string>
    <string name="readUserProtocol">"请阅读用户协议"</string>
    <string name="userProtocolTitle">海绵娱用户服务协议</string>
    <string name="userProtocol">"声明\n海绵娱移动应用端软件（以下简称“海绵娱”）系一款基于促进明星与粉丝良性互动、挖掘明星潜在价值、拉动粉丝经济的理念而打造的移动社交产品。海绵娱用户协议分为明星版和粉丝版两个版本，其中，明星版的《海绵娱用户协议》系海绵娱与内地、港澳台明星之间就使用海绵娱应用端达成的协议，明星用户一旦在海绵娱注册成功，该协议即对双方具有法律约束力；粉丝版的《海绵娱用户协议》系海绵娱科技与非明星用户就使用海绵娱达成的协议，该协议自其注册成功时自动生效。\n\n在注册成为用户之前，请您务必审慎阅读并充分理解本协议中各条款。特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制、免责条款可能以加粗形式提示你注意。如您选择点击“同意”或“接受”按钮，即表示接受本协议。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。否则，您无权注册、登录或使用本协议所涉服务。\n如果您未满18周岁，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。\n\n\n一、协议的范围\n海绵娱用户协议（以下简称本协议）由海绵娱（北京）网络科技有限公司（以下简称“海绵娱科技”）和您（用户）签订。\n\n二、账户注册与管理\n用户应当同意本协议的条款并按照页面上的提示完成全部的注册程序。注册成功后，用户将获得一个海绵娱账号和密码。该账户的所有权由海绵娱科技所有。用户仅拥有海绵娱账户的使用权，不得赠与、借用、租用、转让或售卖于第三方。用户须对其通过该账户所发送信息的真实性、合法性、无害性等全权负责，因用户所传播的信息导致的任何法律责任均由用户自行承担。\n\n为避免资源浪费，对于注册海绵娱账户后连续六个月未登陆的用户，海绵娱科技有权收回其账户，由此导致的任何损失由用户自行承担。\n\n三、服务内容\n1、本服务的具体内容由海绵娱科技根据实际情况提供，包括但不限于授权用户通过其账号添加好友、加入群组、关注他人、发布留言、赠送明星礼物（如掌声等）、并在一定条件下获得由明星授权海绵娱科技派发的明星红包、签名照、演出门票、合影机会等。海绵娱有权对本协议中的服务内容予以变更，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知。您在使用相关服务时,应关注并遵守其所适用的相关条款。\n\n2、海绵娱科技提供的服务包含免费服务与收费服务。用户可以通过付费方式购买收费服务，具体方式为：用户通过网上银行、支付宝或其他付费平台支付一定数额的人民币购买“海绵娱”的虚拟货币——娱币，然后根据海绵娱科技公布的资费标准以娱币购买用户欲使用的收费服务，从而获得收费服务使用权限。对于收费的服务，海绵娱科技会在用户使用之前给予用户明确的提示，只有用户根据提示确认愿意购买该服务并支付相关费用（支付行为的完成以银行或第三方支付平台生成“支付已完成”的确认通知为准），用户才能使用该收费服务。否则，海绵娱科技有权不向用户提供该等收费服务。\n\n四、使用规则\n1、用户注册海绵娱账号，制作、发布、传播信息内容的，应当使用真实身份信息及个人资料，不得以虚假、冒用的居民身份信息进行注册；若用户的个人资料有任何变动，用户应及时更新。\n\n2、用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，且不应被视为反映或代表海绵娱科技的观点、立场或政策，海绵娱科技对此不承担任何责任。\n\n3、海绵娱致力于为用户提供文明健康、规范有序的网络环境，您在使用海绵娱服务的过程中应文明发言，并依法尊重其它用户的人格权与身份权等人身权利，共同建立和谐、文明、礼貌的网络社交环境，不得利用海绵娱帐号发送侵犯其他用户合法权益的内容或干扰海绵娱的正常运营，包括但不限于：\n（1）违反宪法确定的基本原则的；\n（2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n（3）损害国家荣誉和利益的；\n（4）煽动民族仇恨、民族歧视，破坏民族团结的；\n（5）破坏国家宗教政策，宣扬邪教和封建迷信的；\n（6）散布谣言，扰乱社会秩序，破坏社会稳定的；\n（7）散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；\n（8）侮辱或者诽谤他人，侵害他人合法权益的；\n（9）煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；\n（10）以非法民间组织名义活动的；\n（12））涉及他人隐私、个人信息或资料的；\n（13）发表、传送、传播骚扰、广告信息及垃圾信息或含有任何性或性暗示的；\n（14）其他违反法律法规、政策及公序良俗、社会公德或干扰海绵娱正常运营和侵犯其他用户或第三方合法权益内容的信息。\n\n\n4、用户不得利用海绵娱账号进行如下行为：\n(1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的；\n(2) 利用技术手段批量建立虚假账号的；\n(3) 虚构事实、隐瞒真相以误导、欺骗他人的；\n(4) 强制、诱导其他用户关注、点击链接页面或分享信息的；\n(5) 利用“海绵娱”账号或本服务从事任何违法犯罪活动的；\n(6) 其他违反法律法规规定、侵犯其他用户合法权益、干扰“海绵娱”正常运营或海绵娱科技未明示授权的行为。\n\n五、虚拟货币\n\n1、为便于用户购买和使用海绵娱相关增值服务（包括但不限于赠送明星掌声服务及会员服务），海绵娱科技将在海绵娱平台发行虚拟货币，即娱币。娱币仅限于在海绵娱平台流通，不得用于其他任何用途。\n\n2、海绵娱各项相关增值服务的价格均以娱币为单位，具体请参照海绵娱页面显示的相关价格信息。\n\n3、人民币和娱币的兑换比例是1:100即1元兑换100个娱币，海绵娱科技有权根据运营情况决定调整该兑换比例，并将调整信息公布在海绵娱相关页面上。\n\n4、用户注册的行为即表示同意开通娱币账户，以进行娱币购买和消费。娱币余额及明细（购买记录、消费记录）可在娱币页面查询。除此之外的其他娱币相关信息，恕不公开。\n\n5、用户可以通过网上银行、支付宝或其他“海绵娱”平台提供的充值途径为娱币账户进行充值。\n\n6、娱币一经充值成功，除法律法规明确规定外，不得兑换为法定货币，不得转让，不得赠与他人。用户同意，娱币账户充值完成后，不得以任何理由要求海绵娱科技退款。\n\n7、娱币只能用于购买海绵娱平台上的各类增值服务，除此之外，不得与其他任何第三方进行娱币交易，亦不得在除海绵娱平台以外的第三方平台（如淘宝）上进行交易；否则，因此造成用户或第三方损失的，海绵娱科技不负任何责任。在有理由怀疑用户的娱币帐户或使用情况有作弊或异常状况情形下，海绵娱科技有权拒绝该用户使用娱币进行支付，并对该账户采取相关封禁措施。\n\n8、除法律法规明确规定或本协议另有约定外，用户不得以任何理由要求海绵娱科技对其已购买的收费服务退款（即退换成娱币或法定货币）或调换成其他服务。\n\n六、用户隐私保护\n1、用户在注册海绵娱账号或使用本服务的过程中，可能会被要求填写或提交一些必要的信息，如法律法规、规章规范性文件（以下称“法律法规”）规定的需要填写的身份信息。如用户提交的信息不完整或不符合法律法规的规定，可能无法使用本服务或在使用本服务的过程中受到限制。\n\n2、尊重用户个人隐私信息是海绵娱科技恪守的商业道德，海绵娱科技竭力采取技术措施和其他必要措施，以确保用户个人隐私信息泄露、毁损或丢失。在使用海绵娱科技提供的服务时，除法律法规规定、公共利益需要、用户授权以及因海绵娱科技运营需要服务提供商使用用户信息（如海绵娱数据储存与管理等）外，海绵娱科技将严格保密用户的真实姓名、通信地址、联系电话、电子邮箱等个人隐私信息的安全，不向第三方透露。\n\n海绵娱科技在提供各项服务过程中的必要且合理地使用用户个人信息以及通过邮件、短信等方式向用户推送的软件更新、条款变更或商业信息中如涉及用户姓名的，不应视为对用户隐私的侵犯。\n\n3、海绵娱科技将竭力保护用户个人信息，但以下情形除外：\n（1）用户自行向第三方公开其个人隐私信息；\n（2）由于黑客攻击、电脑病毒侵入及其他不可抗力事件导致用户个人隐私信息的泄露。\n（3）为改进海绵娱产品和用户体验，海绵娱科技内部对用户数据进行的分析和研究。\n\n4、未成年人保护条款\n（1）任何18岁以下的未成年人注册海绵娱账号或使用本服务应事先取得家长或其法定监护人（以下简称“监护人”）的书面同意。除根据法律法规的规定及未成年人的法定监护人授权外，海绵娱科技不会使用或向任何第三方透露未成年人的个人隐私信息。\n（2）未成年人用户处于身心发展阶段，应避免因沉迷于互联网移动端而影响日常的学习和生活。\n（3）未成年用户应避免单独会见陌生人，提高自我保护意识。\n\n七、知识产权\n海绵娱科技是海绵娱平台产品及其产品中所有信息内容的所有权及知识产权权利人。海绵娱平台产品及其产品信息包括但不限于由海绵娱科技发布的信息分享、辅助工具、应用程序等功能和服务以及程序代码、界面设计、版面框架、数据资料、账号、文字、图片、图形、图表、音频、视频等。海绵娱科技保留在任何时间内以任何方式处置上述产品或内容，处置的方式包括但不限于变更、修订和删除。\n\n八、广告\n海绵娱科技提供的服务中可能包括投放各种商业性广告或其他类型的商业信息，用户同意在使用过程中显示海绵娱科技和第三方供应商、合作伙伴提供的广告，并同意接受海绵娱科技以电子邮件或其他方式向用户发送合作伙伴的商业广告或促销信息等推送服务。除法律法规明确规定或海绵娱科技特别声明外，用户应自行对依该广告信息进行的交易负责。如用户因此遭受任何损失或损害，海绵娱科技不承担任何责任。\n\n\n九、风险承担\n\n用户理解并同意，因业务发展需要，海绵娱科技有权单方面对本服务的全部或部分服务内容予以变更、暂停、终止或撤销，此种风险需用户自行承担。\n\n十、知识产权声明\n\n1、海绵娱移动端软件及该客户端平台上所有内容，包括但不限于著作、图片、档案、资讯、资料、网站架构、网站画面的安排、网页设计，均由海绵娱科技拥有其知识产权，包括但不限于商标权、专利权、著作权、商业秘密等。\n除海绵娱平台服务中涉及的广告的知识产权由相应广告商享有外，由海绵娱平台提供的内容（包括但不限于网页、文字、图片、音频、视频、图表等）的知识产权均归海绵娱科技所有。\n\n2、除另有特别声明外，海绵娱科技提供本服务时所依托软件的著作权、专利权及其他知识产权均归海绵娱科技所有。\n\n3、海绵娱科技在本服务中所涉及的图形、文字或其组成，以及其他海绵娱科技标志及产品、服务名称（以下统称“海绵娱科技标识”），其著作权或商标权归海绵娱科技所有。未经海绵娱科技事先书面同意，用户不得将海绵娱科技标识以任何方式展示或使用或作其他处理。\n\n十二、不可抗力及其他免责事由\n\n1、不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，海绵娱科技将努力在第一时间与相关单位配合，及时进行修复，但是由此给您造成的损失海绵娱科技在法律允许的范围内免责。\n\n2、因不可抗力、计算机病毒或黑客攻击、系统不稳定、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险，因此导致的用户或第三方任何损失，海绵娱科技不承担任何责任。\n\n\n3、海绵娱科技需要定期或不定期地对“海绵娱”平台或相关的设备进行检修或者维护，如因此类情况而造成服务在合理时间内的中断，海绵娱科技无需为此承担任何责任，但海绵娱科技应事先进行通告。\n\n4、对于海绵娱科技向用户提供的下列产品或者服务的质量缺陷及其引发的任何损失，海绵娱科技无需承担任何责任：\n(1) 海绵娱科技向用户免费提供的服务；\n(2) 海绵娱科技向用户赠送的任何产品或者服务。\n\n十三、服务的变更、中断、终止\n\n1、鉴于网络服务的特殊性，海绵娱科技有权随时变更、中断或终止部分或全部的服务（包括收费服务），但应当在变更、中断或终止之前通知用户，并应向受影响的用户提供等值的替代性的服务；如用户不愿意接受替代性的服务，但已经向海绵娱科技支付过娱币，海绵娱科技应当按照该用户实际使用服务的情况扣除相应娱币之后将剩余的娱币退还用户的娱币账户中。\n\n2、以下情形下，海绵娱科技有权变更、中断或终止向用户提供的免费服务或收费服务，而无需对用户或任何第三方承担任何责任：\n（1）根据法律规定，用户应提交真实信息，没有合理理由却又不提交的；\n（2）用户违反相关法律法规或本协议的约定；\n（3）按照法律规定或有权机关的要求；\n（4）紧急情形下且有合理理由必须变更、中断或终止服务的情形。\n\n十四、其他\n\n1、海绵娱科技再次郑重提醒：请用户审慎阅读本协议，并特别注意本协议中免除海绵娱科技责任和限制用户权利的条款。未成年人应在法定监护人的陪同下阅读本协议。\n\n2、本协议在履行中如发生纠纷或争议，首先应友好协商解决，协商不成的，双方同意将纠纷或争议提交海绵娱科技住所地有管辖权的人民法院提起诉讼。\n\n海绵娱科技\n" /></string>
    <string name="dialog_warning_title">输入赠送好友金额</string>
    <string name="dialog_warning_ok">确    定</string>
    <string name="dialog_warning_cancel">取    消</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="mainactivity_login_invalidate">登录已失效</string>
    <string name="mainactivity_get_user_info">获取用户基本信息...</string>
    <string name="mainactivity_get_start_info">获取明星基本信息...</string>
    <string name="mainactivity_get_sart_info">获取明星排行信息...</string>
    <string name="mainactivity_kline_graphc">获取价值曲线</string>
    <string name="mainactivity_fail_get_sart_info">无法获取明星排行信息</string>
    <string name="mainactivity_have_no_data">没有更多数据了</string>
    <string name="mainactivity_have_no_search_data">没有搜索结果</string>
    <string name="fragment_account_description">说明</string>
    <string name="fragment_account_amount">数量</string>
    <string name="fragment_account_type">类型</string>
    <string name="fragment_account_remain">余额</string>
    <string name="fragment_account_time">时间</string>
    <string name="fragment_account_fail_data">获取数据失败</string>
    <string name="fragment_account_refresh_now">正在刷新</string>
    <string name="fragment_account_pull_down">下拉刷新</string>
    <string name="fragment_account_release_refresh">释放开始刷新</string>
    <string name="fragment_account_last_update_time">最后更新时间：</string>
    <string name="fragment_account_loading">正在加载</string>
    <string name="fragment_account_pull_up">上拉翻页</string>
    <string name="fragment_account_release_loading">释放开始加载</string>
    <string name="fragment_account_last_loading_time">最后加载时间：</string>
    <string name="fragment_account_item_publish_name">范彬彬</string>
    <string name="fragment_account_item_publish_income">收入</string>
    <string name="fragment_account_item_publish_payout">支出</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
</resources>