<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView_login_logo"
            android:layout_width="150dip"
            android:layout_height="120dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:src="@drawable/activity_login_logo" />

        <ImageView
            android:id="@+id/imageView_login_title"
            android:layout_width="180dip"
            android:layout_height="40dip"
            android:src="@drawable/activity_login_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/activity_login_edit_bg"
            android:gravity="center"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/login_editText_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/editText_phone_hit"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="12dip" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_edit_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textView_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/login_editText_passWord"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/password_hit"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textColor="@color/white"
                    android:textSize="12dip" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="10dip" >

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_button"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_button"
                android:text="@string/signup"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="150dip"
            android:layout_height="120dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:src="@drawable/activity_login_logo"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/view2"
            android:layout_width="150dip"
            android:layout_height="30dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >
        </LinearLayout>

        <Button
            android:layout_width="120dip"
            android:layout_height="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/activity_login_button"
            android:text="@string/get_validate"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_forget_password"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:gravity="center"
            android:textSize="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBox_remember_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="12dp"
            android:text="@string/remember_password"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
