<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="170dip"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/activity_login_edit_bg"
            android:gravity="center"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/signUp_editText_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/editText_phone_hit"
                android:inputType="phone"
                android:lines="13"
                android:textColor="@color/white"
                android:textSize="12dip" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_edit_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textView_validate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validate"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/signUp_editText_validate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/validate_hit"
                    android:textColor="@color/white"
                    android:textSize="12dip" >
                </EditText>

                <TextView
                    android:id="@+id/vtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="&#45;&#45;"
                    android:textColor="@color/red2"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_edit_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textView_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/signUp_editText_passWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/password_hit"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="12dip" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_edit_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textView_password_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_again"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/signUp_editText_passWord_againt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/password_again_hit"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="12dip" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_edit_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/textView_shareCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="分享码："
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/signUp_editText_shareCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/shareCode_hit"
                    android:textColor="@color/white"
                    android:textSize="12dip" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginTop="10dip" >

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_button"
                android:text="@string/login_ok"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dip"
                android:layout_weight="1"
                android:background="@drawable/activity_login_button"
                android:text="@string/login_cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="170dip"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="150dip"
            android:layout_height="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="CheckBox"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_ready_protocol"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="120dip"
            android:layout_height="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/activity_login_button"
            android:text="@string/get_validate"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
