<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blackcover"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="vertical"
        android:paddingTop="5dip" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:text="@string/dialog_alert_select_select"
                android:textColor="@color/white"
                android:textSize="16dip" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackcover"
        android:orientation="vertical"
        android:paddingBottom="3dip"
        android:paddingLeft="3dip"
        android:paddingRight="3dip" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dip" >

        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="3dip"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/dialog_alert_select_ok"
            android:textColor="@color/red2"
            android:textSize="12dip" />

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="3dip"
            android:layout_weight="1"
            android:background="@color/red2"
            android:text="@string/dialog_alert_select_cancel"
            android:textColor="@color/white"
            android:textSize="12dip" />
    </LinearLayout>

</LinearLayout>